--- a/GlucoMan.Maui/CalculatorPage.xaml
+++ b/GlucoMan.Maui/CalculatorPage.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:res="clr-namespace:GlucoMan.Maui.Resources.Strings"
              x:Class="GlucoMan.Maui.CalculatorPage"
-             Title="Calculator">
+             Title="{x:Static res:AppStrings.CalculatorPageTitle}">
     <Grid RowDefinitions="Auto,*,*,*,*,*,*"
           ColumnDefinitions="*,*,*,*"
           Padding="10"
@@ -22,19 +23,19 @@
             </VerticalStackLayout>
         </Frame>
         <!-- Clear and Delete buttons -->
-        <Button Grid.Row="1" Grid.Column="0" Text="C" 
+        <Button Grid.Row="1" Grid.Column="0" Text="{x:Static res:AppStrings.CalcClear}"
                 BackgroundColor="#E57373" 
                 TextColor="White" 
                 FontSize="24" 
                 Clicked="OnClearClicked"
                 IsEnabled="False"/>
-        <Button Grid.Row="1" Grid.Column="1" Text="CE" 
+        <Button Grid.Row="1" Grid.Column="1" Text="{x:Static res:AppStrings.CalcClearEntry}"
                 BackgroundColor="#E57373" 
                 TextColor="White" 
                 FontSize="24" 
                 Clicked="OnClearEntryClicked"
                 />
-        <Button Grid.Row="1" Grid.Column="2" Text="⌫" 
+        <Button Grid.Row="1" Grid.Column="2" Text="{x:Static res:AppStrings.CalcBackspace}"
                 BackgroundColor="#FFAB91" 
                 TextColor="White" 
                 FontSize="24" 
@@ -121,13 +122,13 @@
                 TextColor="White" 
                 FontSize="24" 
                 Clicked="OnEqualsClicked"/>
-        <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Text="OK" 
+        <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Text="{x:Static res:AppStrings.OK}"
                 Margin="0,20,0,0"
                 BackgroundColor="#78909C" 
                 TextColor="White" 
                 FontSize="18" 
                 Clicked="OnOkClicked"/>
-        <Button Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" Text="Escape" 
+        <Button Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" Text="{x:Static res:AppStrings.CalcEscape}"
                 Margin="0,20,0,0"
                 BackgroundColor="#78909C" 
                 TextColor="White" 
