--- a/GlucoMan.Maui/AboutPage.xaml
+++ b/GlucoMan.Maui/AboutPage.xaml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:res="clr-namespace:GlucoMan.Maui.Resources.Strings"
              x:Class="GlucoMan.Maui.AboutPage"
-             Title="About">
+             Title="{x:Static res:AppStrings.AboutPageTitle}">
     <ScrollView>
         <Grid RowDefinitions="*">
             <VerticalStackLayout VerticalOptions="Fill" HorizontalOptions="Fill">
@@ -15,13 +16,16 @@
             <ScrollView Grid.Row="0">
                 <VerticalStackLayout Padding="20,24,20,24" Spacing="8">
                     <Border BackgroundColor="#2196F3" Padding="0">
-                        <Label x:Name="lblAppName" Text="GlucoMan" HorizontalTextAlignment="Center" TextColor="White" FontSize="32"/>
+                        <Label x:Name="lblAppName" Text="{x:Static res:AppStrings.AppTitle}" HorizontalTextAlignment="Center" TextColor="White" FontSize="32"/>
                     </Border>
-                    <Label Text="GlucoMan is a Glucose Manager program for the diabetic person" FontSize="20" Padding="0,0,0,0"/>
-                    <Label Text="Helps with the daily operations needed to manage carbs counting. Currently manages data related to measured glucose, carbohydrates consumed during meals, foods, insulin injections.
-Calculates: the insulin bolus based on carbohydrates to be consumed during meals, the foods to eat to reach the desired carbohydrates and also a rough prediction of when blood sugar will reach a hypo value.
-The program has provisions to manage recipes, still not completed. Prototype functions for weighing foods are also included in the code, but disabled in the UI, since they are  still in very preliminary development." 
-                 FontSize="15" Padding="0,0,0,0"/>
+                    <Label Text="{x:Static res:AppStrings.AppShortScope}" FontSize="20" Padding="0,0,0,0"/>
+                    <Label Text="{x:Static res:AppStrings.AppAboutParagrah1}"  
+                           FontSize="15" Padding="0,0,0,0"/>
+                    <Label Text="{x:Static res:AppStrings.AppAboutParagrah2}"
+                           FontSize="15" Padding="0,0,0,0"/>
+                    <Label Text="{x:Static res:AppStrings.AppAboutParagrah3}"
+                           FontSize="15" Padding="0,0,0,0"/>
+                     
                     <Label Text="The function of every button or entry box is explained by a 'tooltip' text. Keep the button or entry box pressed for a sufficient time to see the text popping out" 
                  FontSize="13" HorizontalTextAlignment="Start" Padding="0,0,0,0"/>
                     <Label Text="GlucoMan is Free Software (licence: GPL v.2) initiated by:" FontSize="15" HorizontalTextAlignment="Center" Padding="0,0,0,0"/>
@@ -36,7 +40,7 @@ The program has provisions to manage recipes, still not completed. Prototype fun
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
-                    <Button x:Name="btnExit" TextColor="White" Text="Menù" Clicked="btnExit_Click" />
+                    <Button x:Name="btnExit" TextColor="White" Text="{x:Static res:AppStrings.Back}" Clicked="btnExit_Click" />
                 </VerticalStackLayout>
             </ScrollView>
         </Grid>
