--- a/GlucoMan.Maui/ChartPage.xaml
+++ b/GlucoMan.Maui/ChartPage.xaml
@@ -2,8 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:skia="clr-namespace:SkiaSharp.Views.Maui.Controls;assembly=SkiaSharp.Views.Maui.Controls"
+             xmlns:res="clr-namespace:GlucoMan.Maui.Resources.Strings"
              x:Class="GlucoMan.Maui.ChartPage"
-             Title="Chart">
+             Title="{x:Static res:AppStrings.ChartPageTitle}">
     <Grid Padding="15,10,15,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -27,7 +28,7 @@
         <!-- Date navigation buttons -->
         <Button x:Name="btnPreviousDay"
                 Grid.Row="1"
-                Text="◀"
+                Text="{x:Static res:AppStrings.ChartPagePreviousDay}"
                 FontSize="20"
                 HorizontalOptions="Start"
                 VerticalOptions="Center"
@@ -38,7 +39,7 @@
         
         <Button x:Name="btnNextDay"
                 Grid.Row="1"
-                Text="▶"
+                Text="{x:Static res:AppStrings.ChartPageNextDay}"
                 FontSize="20"
                 HorizontalOptions="End"
                 VerticalOptions="Center"
