--- a/GlucoMan.Maui/ConfigurationPage.xaml
+++ b/GlucoMan.Maui/ConfigurationPage.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:res="clr-namespace:GlucoMan.Maui.Resources.Strings"
              x:Class="GlucoMan.Maui.ConfigurationPage"
-             Title="ConfigurationPage">
+             Title="{x:Static res:AppStrings.ConfigurationPageTitle}">
     <Grid>
         <Grid RowDefinitions="*,*" 
               Grid.ColumnDefinitions="*,*" />
         <Label 
-            Text="Times for meals"
+            Text="{x:Static res:AppStrings.TimesForMeals}"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </Grid>
