--- a/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
+++ b/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:strings="clr-namespace:GlucoMan.Maui.Resources.Strings"
              x:Class="GlucoMan.Maui.FoodToHitTargetCarbsPage"
-             Title="Food to reach CHO">
+             Title="{x:Static strings:AppStrings.FoodToHitTargetCarbsPageTitle}">
     <ContentPage.Content>
         <!--RowDefinitions="60,0,50,60,20,60,60,60,50,60"-->
         <Grid RowDefinitions="75,
@@ -12,83 +13,83 @@
               Margin="1">
             <Button Grid.Row="0" Grid.Column="1" x:Name="btnCalculateGrams" 
                     ImageSource="calc_food.png"
-                   ToolTipProperties.Text="Food Calc: calculates the grams of chosen food you need to eat to reach the target carbohydrates"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipCalculateFoodGrams}"
                    IsEnabled="True" Clicked="btnCalculateGrams_Click" />
            
-            <Label Grid.Row="2" Grid.Column="0" Text="Target CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="2" Grid.Column="0" Text="{x:Static strings:AppStrings.TargetCHO}" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="3" Grid.Column="0" x:Name="TxtTargetCho" Text="" Unfocused="TxtTargetCho_Leave"
-                   ToolTipProperties.Text="Carbohydrates we want to reach [g]"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipTargetCHO}"
                    Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" 
                    BackgroundColor="PaleGreen" TextColor="Black"/>
 
-            <Label Grid.Row="2" Grid.Column="1" Text="CHO already taken [g]" 
+            <Label Grid.Row="2" Grid.Column="1" Text="{x:Static strings:AppStrings.CHOAlreadyTaken}" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End" />            
             <Entry Grid.Row="3" Grid.Column="1" x:Name="TxtChoAlreadyTaken" Text="" Unfocused="TxtChoAlreadyTaken_Leave"
-                   ToolTipProperties.Text="Carbohydrates already eaten [g]"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipCHOAlreadyTaken}"
                    Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" 
                    BackgroundColor="PaleGreen" TextColor="Black"/>
 
-            <Label Grid.Row="2" Grid.Column="2" Text="CHO food to eat [%]" 
+            <Label Grid.Row="2" Grid.Column="2" Text="{x:Static strings:AppStrings.CHOFoodPercent}" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="3" Grid.Column="2" x:Name="TxtChoOfFood" Text="" Unfocused="TxtChoOfFood_Leave"
-                   ToolTipProperties.Text="Carbohydrates % of the food that we want to eat to reach the target carboydrates [%]"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipCHOFoodPercent}"
                    Keyboard="Numeric"  Placeholder="%" HorizontalTextAlignment="End" 
                    FontSize="Large" 
                    BackgroundColor="PaleGreen" TextColor="Black"/>
 
             <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" 
-                   Text="Food to eat to complete CHO budget" 
+                   Text="{x:Static strings:AppStrings.FoodToCompleteCHOBudget}" 
                    VerticalOptions="End" HorizontalTextAlignment="Center" 
                    HorizontalOptions="Center"/>
             
             <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" x:Name="TxtFoodName" Text=""
                    FontAttributes="Bold" FontSize="Medium"
                    HorizontalTextAlignment ="Center" HorizontalOptions="Center" 
-                   ToolTipProperties.Text="Short name of the food we want to eat to reach the target carbohydrates"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipFoodToHitTargetGrams}"
                    />
 
             <Button Grid.Row="6" Grid.Column="0" x:Name="btnReadTarget"
                     ImageSource="target.png"
-                    ToolTipProperties.Text="Read Target CHO: reads from the bolus calculation page the CHO to eat"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipReadTargetCHO}"
                     Clicked="btnReadTargetCho_Click" />
             <!--Text="Read target&#10;CHO"-->
             <Button Grid.Row="6" Grid.Column="1" x:Name="btnReadChoTaken" 
                     ImageSource="get_last_sugar.png"
-                    ToolTipProperties.Text="Read eaten CHO: reads from the meal page the quantity of carbohydrates already eaten"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipReadEatenCHO}"
                     IsEnabled="True" Clicked="btnReadChoTaken_Click" />
             <!--Text="Read taken&#10;CHO" LineBreakMode="WordWrap" Margin="1"-->
             <Button Grid.Row="6" Grid.Column="2" x:Name="btnReadFood" 
                     ImageSource="get_last_food.png"
-                    ToolTipProperties.Text="Read food CHO: reads from the meal page the CHO% of the food that is selected"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipReadFoodCHO}"
                     IsEnabled="True" Clicked="btnReadFood_Click" />
             <!--Text="Read Food&#10;CHO [%]" LineBreakMode="WordWrap" Margin="1"-->
             
             <Button Grid.Row="7" Grid.Column="1" x:Name="btnReadAll"
                     ImageSource="get_last_all.png"
-                    ToolTipProperties.Text="Read all: reads all the parameters useful to calculate the CHO that has still to be eaten"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipReadAll}"
                     Clicked="btnReadAll_Click" />
             <!--Text="Read All"-->
 
-            <Label Grid.Row="8" Grid.Column="0" Text="CHO left to take [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="8" Grid.Column="0" Text="{x:Static strings:AppStrings.CHOLeftToTake}" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="9" Grid.Column="0" x:Name="TxtChoLeftToTake" Text="" Unfocused="TxtChoOfFood_Leave"
                    Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" Margin="1"
-                   ToolTipProperties.Text="CHO left: calculated carbohydrates to be eaten to reach the target"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipChoLeft}"
                    VerticalOptions="Center"
                    BackgroundColor="SkyBlue" TextColor="Black"
                    FontSize="Large" />
 
             <Button Grid.Row="9" Grid.Column="1"  IsEnabled="True" Margin="1"
                     ImageSource="syringe.png"
-                   ToolTipProperties.Text="Insulin: opens the insulin injctions page"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipInjectionButton}"
                     x:Name="btnInjection" Clicked="btnInjection_Click" />
             <!--Text="Injection"-->
-            <Label Grid.Row="8" Grid.Column="2" Text="Food to eat to hit target CHO [g]" 
+            <Label Grid.Row="8" Grid.Column="2" Text="{x:Static strings:AppStrings.FoodToHitTargetCHOGrams}" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="9" Grid.Column="2" x:Name="TxtFoodToHitTarget" Text="" Margin="1"
                    Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End"
-                   ToolTipProperties.Text="Food to eat: grams of the chosen food one has to eat to reach the target carbohydrates"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipFoodToHitTargetGrams}"
                    VerticalOptions="Center" FontSize="Large" 
                    BackgroundColor="SkyBlue" TextColor="Black"/>
         </Grid>
