--- a/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
+++ b/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
@@ -1,32 +1,38 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:strings="clr-namespace:GlucoMan.Maui.Resources.Strings"
              x:Class="GlucoMan.Maui.GlucoseMeasurementsPage"
-             Title="Glucose Measurements">
+             Title="{x:Static strings:AppStrings.GlucoseMeasurementsTitle}">
     <ContentPage.Content>
         <!--RowDefinitions="40,50,50,50,30,30,*"-->
         <Grid RowDefinitions="Auto,Auto,Auto,65,Auto,Auto,*"
               ColumnDefinitions="*,*,*,*">
-            <Label Grid.Row="0" Grid.Column="0" Text="Glucose&#10;[mg/dL]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"
-                   ToolTipProperties.Text="Glucose measurement taken from the instrument" LineBreakMode="WordWrap"/>
-            <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Text="Measurement time" 
+            <Label Grid.Row="0" Grid.Column="0" Text="{x:Static strings:AppStrings.GlucoseMgDl}" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"
-                   ToolTipProperties.Text="Date and time of measurement of glucose"/>
-            <Label Grid.Row="0" Grid.Column="3" Text="Id" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipGlucoseMeasurement}" 
+                   LineBreakMode="WordWrap"/>
+            <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" 
+                   Text="{x:Static strings:AppStrings.MeasurementTime}" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipDateAndTimeOfMeasurement}"/>
+            <Label Grid.Row="0" Grid.Column="3" Text="{x:Static strings:AppStrings.Id}" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucose" Text="" FontSize="Medium"
                    Keyboard="Numeric" HorizontalTextAlignment="End" 
                    BackgroundColor="Lime" TextColor="Black"
-                   ToolTipProperties.Text="Glucose measurement taken from the instrument" IsEnabled="true"/>
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipGlucoseMeasurement}" 
+                   IsEnabled="true"/>
             <DatePicker Grid.Row="1" Grid.Column="1" x:Name="dtpEventDate" Margin="1"
                         BackgroundColor="PaleGreen" TextColor="Black"
                         HorizontalOptions="Center" VerticalOptions="Center"
-                        ToolTipProperties.Text="Date of measurement of glucose"/>
+                        ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipDateOfMeasurement}"/>
             <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime" 
                         BackgroundColor="PaleGreen" TextColor="Black"
                         HorizontalOptions="Center" VerticalOptions="Center" Margin="1"
                         Format="HH:mm:ss"
-                        ToolTipProperties.Text="Time of measurement of glucose"/>
+                        ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipTimeOfMeasurement}"/>
             <Label Grid.Row="1" Grid.Column="3" x:Name="txtIdGlucoseRecord" Text=""
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
 
@@ -34,34 +40,34 @@
             <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4"
                    x:Name="txtNotes" BackgroundColor="LightGreen" TextColor="Black"
                    HorizontalTextAlignment="Start" IsReadOnly="false"
-                   ToolTipProperties.Text="Note about the measurement" />
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipNoteAboutMeasurement}" />
 
             <Button Grid.Row="3" Grid.Column="0" x:Name="btnNow" Margin="1"
                     ImageSource="clock.png"
-                    ToolTipProperties.Text="Now: sets the date and time at the current instant" 
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipNowButton}" 
                     Clicked="btnNow_Click"/>
             <!--Text="Now"-->
             <Grid Grid.Row="3" Grid.Column="1" ColumnDefinitions="*,*">
                 <Button Grid.Row="0" Grid.Column="0" x:Name="btnAddMeasurement" Margin="1"
                         ImageSource="plus.png"
-                        ToolTipProperties.Text="Plus: adds a new measurement with the data taken from UI" 
+                        ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipPlusButton}" 
                         Clicked="btnAddMeasurement_Click"/>
                 <!--Text="+"-->
                 <Button Grid.Row="0" Grid.Column="1"
                         ImageSource="minus.png"
                         x:Name="btnRemoveMeasurement" Margin="1"
-                    ToolTipProperties.Text="Minus: deletes the selected measurement" 
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipMinusButton}" 
                     Clicked="btnRemoveMeasurement_Click"/>
                 <!--Text="-"-->
             </Grid>
             <Button Grid.Row="3" Grid.Column="2" Margin="1"
                     ImageSource="clear_fields.png"
-                    ToolTipProperties.Text="Clear Data: deletes the fields in the UI" 
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipClearData}" 
                     Clicked="btnClearData_Click"/>
             <!--Text="Clear Data"-->
             <Button Grid.Row="3" Grid.Column="3" x:Name="btnSave" Margin="1"
                     ImageSource="floppy_disc.png"
-                    ToolTipProperties.Text="Save: saves the modifications made on current measurement" 
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipGlucoseSaveButton}" 
                     Clicked="btnSave_ClickAsync"/>
             <!--Text="Save"-->
             <HorizontalStackLayout Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
@@ -73,7 +79,8 @@
                         </OnPlatform>
                     </CheckBox.Margin>
                 </CheckBox>
-                <Label VerticalTextAlignment="Center" VerticalOptions="Center" Text="Add with Now as time">
+                <Label VerticalTextAlignment="Center" VerticalOptions="Center" 
+                       Text="{x:Static strings:AppStrings.AddWithNowAsTime}">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer>
 
@@ -84,7 +91,7 @@
 
             <ListView Grid.Row="6" Grid.ColumnSpan="4"
                       x:Name="gridMeasurements" ItemsSource="{Binding}"
-                      ToolTipProperties.Text="List of past glucose measurements"
+                      ToolTipProperties.Text="{x:Static strings:AppStrings.ListOfPastGlucoseMeasurements}"
                       ItemSelected="OnGridSelection" 
                       RowHeight="22">
                 <!-- Header with column labels -->
@@ -93,12 +100,12 @@
                           BackgroundColor="#e8f5e9"
                           Margin="2"
                           Padding="0,3,0,3">
-                        <Label Grid.Column="0" Text="Time" 
+                        <Label Grid.Column="0" Text="{x:Static strings:AppStrings.Time}" 
                                HorizontalTextAlignment="Center"
                                FontAttributes="Bold"
                                FontSize="14"
                                TextColor="#2c3e50"/>
-                        <Label Grid.Column="1" Text="Gluc.[mg/dL]" 
+                        <Label Grid.Column="1" Text="{x:Static strings:AppStrings.GlucColumn}" 
                                HorizontalTextAlignment="Center"
                                FontAttributes="Bold"
                                FontSize="14"
