--- a/GlucoMan.Maui/RecipesPage.xaml
+++ b/GlucoMan.Maui/RecipesPage.xaml
@@ -1,63 +1,67 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:strings="clr-namespace:GlucoMan.Maui.Resources.Strings"
              x:Class="GlucoMan.Maui.RecipesPage"
-             Title="Recipes" Loaded="PageLoaded">
+             Title="{x:Static strings:AppStrings.RecipesPageTitle}" 
+             Loaded="PageLoaded">
     <ContentPage.Content>
-        <!--Grid.RowDefinitions="20,20,45,20,45,20,45,50,20,*"-->
         <Grid Grid.RowDefinitions="Auto,
               Auto,50,Auto,Auto,Auto,
               50,50,Auto,*"
             Grid.ColumnDefinitions="*, *, *, *">
             <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
-                Grid.ColumnSpan="4" Text="Recipe's information" 
+                Grid.ColumnSpan="4" Text="{x:Static strings:AppStrings.RecipePageTitle}" 
                 FontAttributes="Bold"
                 HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="2" Text="Id Recipe" 
+            <Label Grid.Row="1" Grid.Column="2" Text="{x:Static strings:AppStrings.Id}" 
                 HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"  Text="Name of the recipe" 
+            <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"  
+                   Text="{x:Static strings:AppStrings.RecipeName}" 
                 HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" 
                     x:Name="txtName"
                    BackgroundColor="GreenYellow" TextColor="Black"
-                    ToolTipProperties.Text="Name: short name of this recipe"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.RecipeName}"
                     Keyboard="Text" HorizontalTextAlignment="Start" VerticalTextAlignment="Center"
                     FontSize="Small" IsReadOnly="false"/>
             <Entry Grid.Row="2" Grid.Column="2" x:Name="txtIdRecipe" BackgroundColor="White"
-                    ToolTipProperties.Text="Code of this recipe"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.Id}"
                     FontSize="Medium" HorizontalTextAlignment="Center" 
                     IsReadOnly="true"/>
             <Button Grid.Row="2" Grid.Column="3" x:Name="btnChoose"
                     ImageSource="choose.png"
-                    ToolTipProperties.Text="Chooses this recipe for the meal"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.SelectFood}"
                     Clicked="btnChoose_Click"/>
-            <!--Text="Choose"-->
+
             <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="5,0,0,0"
-                    Text="Description of Recipe" HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
+                    Text="{x:Static strings:AppStrings.LabelRecipesDescription}" 
+                   HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4"
-                    ToolTipProperties.Text="Description: longer description of this recipe"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipRecipesDescription}"
                     x:Name="txtDescription" 
                    BackgroundColor="GreenYellow" TextColor="Black"
                     Keyboard="Text" TextChanged="txtDescription_TextChanged"
                     HorizontalTextAlignment="Start"
                    Text = "{Binding Description}"/>
 
-            <Label Grid.Row="5" Grid.Column="0" Text="Total CHO%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="5" Grid.Column="2" Text="Raw/Cooked Ratio" 
+            <Label Grid.Row="5" Grid.Column="0" Text="{x:Static strings:AppStrings.TotalCarbs}" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="5" Grid.Column="2" Text="{x:Static strings:AppStrings.RawCookedRatio}"
                    x:Name="lblCookedRaw"
                    HorizontalTextAlignment="Start" VerticalTextAlignment="Start"/>
 
             <Entry Grid.Row="6" Grid.Column="0" x:Name="txtRecipeCarbohydrates" Margin="1"
-                    ToolTipProperties.Text="CHO%: total carbohydrates % of this recipe [%]"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TotalCarbs}"
                     BackgroundColor="GreenYellow" TextColor="Black"
                     Keyboard="Numeric" HorizontalTextAlignment="End"
                     FontSize="Large" Text="{Binding Cho.Text}"/>
             <HorizontalStackLayout Grid.Row="6" Grid.Column="1" VerticalOptions="Center">
                 <CheckBox HorizontalOptions="Center" VerticalOptions="Center"
                           x:Name="chkCooked" IsChecked="True" 
-                          ToolTipProperties.Text="Cooked recipe: if checked the carbohydrates regard a cooked recipe, if not checked a raw recipe"
+                          ToolTipProperties.Text="{x:Static strings:AppStrings.RecipeIsCooked}"
                           CheckedChanged="chkCooked_CheckedChanged">
                     <CheckBox.Margin>
                         <OnPlatform x:TypeArguments="Thickness">
@@ -67,70 +71,62 @@
                     </CheckBox.Margin>
                 </CheckBox>
                 <Label HorizontalOptions="Center" HorizontalTextAlignment="Start" Margin="-10,0,0,0" 
-                       ToolTipProperties.Text="Cooked recipe: if checked the carbohydrates regard a cooked recipe, if not checked a raw recipe"
+                       ToolTipProperties.Text="{x:Static strings:AppStrings.RecipeIsCooked}"
                        VerticalTextAlignment="Center" VerticalOptions="Center" Text="Cooked" />
             </HorizontalStackLayout>
             <Entry Grid.Row="6" Grid.Column="2" x:Name="txtRawToCookedRatio" Margin="1"
-                    ToolTipProperties.Text="Cooked to raw ratio: ratio between the cooked weight and the raw weight of the recipe"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.CookedToRawRatio}"
                     BackgroundColor="GreenYellow" TextColor="Black"
                    Keyboard="Numeric" HorizontalTextAlignment="End" />
             <Grid Grid.Row="6" Grid.Column="3" 
                   ColumnDefinitions="*, *">
                 <Button x:Name="btnAddRecipe" Margin="1" Grid.Column="0"
                         ImageSource="plus.png"
-                    ToolTipProperties.Text="Plus: adds a new recipe to the recipes stored in the program"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipPlusButton}"
                     Clicked="btnAddRecipe_Click"/>
-                <!--Text="+"-->
                 <Button x:Name="btnRemoveRecipe" Margin="1" Grid.Column="1"
                         ImageSource="minus.png"
-                    ToolTipProperties.Text="Minus: removes the recipe from those stored in the program"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipMinusButton}"
                     Clicked="btnRemoveRecipe_Click"/>
-                <!--Text="-"-->
             </Grid>
 
             <Button Grid.Row="7" Grid.Column="0" x:Name="btnSaveRecipe"
                     ImageSource="floppy_disc.png"
-                    ToolTipProperties.Text="Save: saves this recipe" Margin="1"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipRecipeSaveButton}" Margin="1"
                     Clicked="btnSaveRecipe_Click"/>
-            <!--Text="Save"-->
             <Button Grid.Row="7" Grid.Column="1" x:Name="btnRecipeDetails" 
                     ImageSource="details.png"
-                    ToolTipProperties.Text="Details: opens the page of recipe's details" Margin="1"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.ShowDetails}" Margin="1"
                     Clicked="btnRecipeDetails_Click"/>
-            <!--Text="Details"-->
             <Button Grid.Row="7" Grid.Column="2" x:Name="btnClearFields"
                     ImageSource="clear_fields.png"
-                    ToolTipProperties.Text="Clear Fields: clears all data in the UI" Margin="1"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.TooltipClearData}" Margin="1"
                     Clicked="btnClearFields_Click" LineBreakMode="WordWrap"
                     FontSize="Micro"/>
-            <!--Text="Clear&#10;Fields"-->
-
             <Button Grid.Row="7" Grid.Column="3" 
                     ImageSource="magnifier.png"
                     x:Name="btnSearchRecipe" Margin="1"
-                    ToolTipProperties.Text="Search: searchs the recipes matching the filter in the UI"
+                    ToolTipProperties.Text="{x:Static strings:AppStrings.Search}"
                     Clicked="btnSearchRecipe_Click"/>
-            <!--Text="Search"-->
 
-            <Label Grid.Row="8" Grid.Column="0" Text="Recipes" Grid.ColumnSpan="4" 
+            <Label Grid.Row="8" Grid.Column="0" Text="{x:Static strings:AppStrings.Recipes}" 
+                   Grid.ColumnSpan="4" 
                    FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <!-- a nested Grid to get different Widths of columns -->
             <Grid Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" Margin="5"
                   RowDefinitions="20,*" ColumnDefinitions="160*,50,50,50">
                 <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" 
                     VerticalOptions="Start" ItemsSource="{Binding}" 
-                   ToolTipProperties.Text="List of filtered recipes"
+                   ToolTipProperties.Text="{x:Static strings:AppStrings.RecipeList}"
                    ItemSelected="OnGridSelection" 
                   x:Name="gridRecipes" 
               RowHeight="22">
-                    <!-- Header with column labels -->
  <ListView.Header>
    <Grid ColumnDefinitions="160*,55,55,55"
     BackgroundColor="#e8f5e9"
          Margin="2"
          Padding="0,3,0,3">
-    <Label Grid.Column="0" Text="Name"
+    <Label Grid.Column="0" Text="{x:Static strings:AppStrings.Name}"
         HorizontalTextAlignment="Start"
       FontAttributes="Bold"
  FontSize="14"
@@ -153,7 +149,6 @@
           TextColor="#2c3e50"/>
     </Grid>
         </ListView.Header>
- <!-- description of data to be shown, in a DataTemplate -->
                     <ListView.ItemTemplate>
                  <DataTemplate>
      <ViewCell>
