--- a/GlucoMan.Maui/StatisticsPage.xaml
+++ b/GlucoMan.Maui/StatisticsPage.xaml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:res="clr-namespace:GlucoMan.Maui.Resources.Strings"
              x:Class="GlucoMan.Maui.StatisticsPage"
-             Title="Statistics">
+             Title="{x:Static res:AppStrings.StatisticsPageTitle}">
     <ScrollView Padding="15,10,15,10">
         <VerticalStackLayout Spacing="20">
             
-            <Label Text="Statistics Page" 
+            <Label Text="{x:Static res:AppStrings.StatisticsPageHeader}"
                    FontSize="24" 
                    FontAttributes="Bold"
                    HorizontalOptions="Center"
@@ -27,12 +28,12 @@
             
             <HorizontalStackLayout Spacing="10" HorizontalOptions="Center">
                 <Button x:Name="btnIdentify" 
-                        Text="Identification 1" 
+                        Text="{x:Static res:AppStrings.Identification1}"
                         Clicked="btnIdentify_Click"
                         HorizontalOptions="Center"/>
                 
                 <Button x:Name="btnIdentify2" 
-                        Text="Identification 2" 
+                        Text="{x:Static res:AppStrings.Identification2}"
                         Clicked="btnIdentify2_Click"
                         HorizontalOptions="Center"/>
             </HorizontalStackLayout>
@@ -42,70 +43,70 @@
                   ColumnSpacing="10" RowSpacing="10" Margin="0,20,0,0">
                 
                 <!-- Headers -->
-                <Label Grid.Row="0" Grid.Column="0" Text="Method 1 (Single τ)" FontAttributes="Bold" FontSize="16" HorizontalOptions="Center"/>
-                <Label Grid.Row="0" Grid.Column="1" Text="Method 2 (Two τ)" FontAttributes="Bold" FontSize="16" HorizontalOptions="Center"/>
+                <Label Grid.Row="0" Grid.Column="0" Text="{x:Static res:AppStrings.Method1SingleTau}" FontAttributes="Bold" FontSize="16" HorizontalOptions="Center"/>
+                <Label Grid.Row="0" Grid.Column="1" Text="{x:Static res:AppStrings.Method2TwoTau}" FontAttributes="Bold" FontSize="16" HorizontalOptions="Center"/>
                 
                 <!-- Method 1 Results -->
-                <Label Grid.Row="1" Grid.Column="0" Text="a (autoregressive):" FontAttributes="Bold"/>
+                <Label Grid.Row="1" Grid.Column="0" Text="{x:Static res:AppStrings.AutoregressiveA}" FontAttributes="Bold"/>
                 <Entry Grid.Row="2" Grid.Column="0" x:Name="entryA" IsReadOnly="true"/>
                 
-                <Label Grid.Row="3" Grid.Column="0" Text="b1 (CHO gain):" FontAttributes="Bold"/>
+                <Label Grid.Row="3" Grid.Column="0" Text="{x:Static res:AppStrings.CHOGainB1}" FontAttributes="Bold"/>
                 <Entry Grid.Row="4" Grid.Column="0" x:Name="entryB1" IsReadOnly="true"/>
                 
-                <Label Grid.Row="5" Grid.Column="0" Text="b2 (Insulin gain):" FontAttributes="Bold"/>
+                <Label Grid.Row="5" Grid.Column="0" Text="{x:Static res:AppStrings.InsulinGainB2}" FontAttributes="Bold"/>
                 <Entry Grid.Row="6" Grid.Column="0" x:Name="entryB2" IsReadOnly="true"/>
                 
-                <Label Grid.Row="7" Grid.Column="0" Text="c (offset):" FontAttributes="Bold"/>
+                <Label Grid.Row="7" Grid.Column="0" Text="{x:Static res:AppStrings.OffsetC}" FontAttributes="Bold"/>
                 <Entry Grid.Row="8" Grid.Column="0" x:Name="entryC" IsReadOnly="true"/>
                 
-                <Label Grid.Row="9" Grid.Column="0" Text="Delay CHO [samples]:" FontAttributes="Bold"/>
+                <Label Grid.Row="9" Grid.Column="0" Text="{x:Static res:AppStrings.DelayCHOSamples}" FontAttributes="Bold"/>
                 <Entry Grid.Row="10" Grid.Column="0" x:Name="entryDelayCHO" IsReadOnly="true"/>
                 
-                <Label Grid.Row="11" Grid.Column="0" Text="Delay Insulin [samples]:" FontAttributes="Bold"/>
+                <Label Grid.Row="11" Grid.Column="0" Text="{x:Static res:AppStrings.DelayInsulinSamples}" FontAttributes="Bold"/>
                 <Entry Grid.Row="12" Grid.Column="0" x:Name="entryDelayInsulin" IsReadOnly="true"/>
                 
-                <Label Grid.Row="13" Grid.Column="0" Text="Time constant T [s]:" FontAttributes="Bold"/>
+                <Label Grid.Row="13" Grid.Column="0" Text="{x:Static res:AppStrings.TimeConstantT}" FontAttributes="Bold"/>
                 <Entry Grid.Row="14" Grid.Column="0" x:Name="entryT" IsReadOnly="true"/>
                 
-                <Label Grid.Row="15" Grid.Column="0" Text="SSE (fit error):" FontAttributes="Bold"/>
+                <Label Grid.Row="15" Grid.Column="0" Text="{x:Static res:AppStrings.SSEFitError}" FontAttributes="Bold"/>
                 <Entry Grid.Row="16" Grid.Column="0" x:Name="entrySSE" IsReadOnly="true"/>
                 
                 <!-- Method 2 Results - CHO Channel -->
-                <Label Grid.Row="1" Grid.Column="1" Text="CHO - τ [s] (μ ± σ):" FontAttributes="Bold"/>
+                <Label Grid.Row="1" Grid.Column="1" Text="{x:Static res:AppStrings.CHOTauMeanSd}" FontAttributes="Bold"/>
                 <Entry Grid.Row="2" Grid.Column="1" x:Name="entryTauCHO" IsReadOnly="true"/>
                 
-                <Label Grid.Row="3" Grid.Column="1" Text="CHO - k (μ ± σ):" FontAttributes="Bold"/>
+                <Label Grid.Row="3" Grid.Column="1" Text="{x:Static res:AppStrings.CHOGainMeanSd}" FontAttributes="Bold"/>
                 <Entry Grid.Row="4" Grid.Column="1" x:Name="entryGainCHO" IsReadOnly="true"/>
                 
-                <Label Grid.Row="5" Grid.Column="1" Text="CHO - Delay [samples] (μ ± σ):" FontAttributes="Bold"/>
+                <Label Grid.Row="5" Grid.Column="1" Text="{x:Static res:AppStrings.CHODelaySamplesMeanSd}" FontAttributes="Bold"/>
                 <Entry Grid.Row="6" Grid.Column="1" x:Name="entryDelayCHO2" IsReadOnly="true"/>
                 
-                <Label Grid.Row="7" Grid.Column="1" Text="CHO - Offset (μ ± σ):" FontAttributes="Bold"/>
+                <Label Grid.Row="7" Grid.Column="1" Text="{x:Static res:AppStrings.CHOOffsetMeanSd}" FontAttributes="Bold"/>
                 <Entry Grid.Row="8" Grid.Column="1" x:Name="entryOffsetCHO" IsReadOnly="true"/>
                 
-                <Label Grid.Row="9" Grid.Column="1" Text="CHO - R² avg:" FontAttributes="Bold"/>
+                <Label Grid.Row="9" Grid.Column="1" Text="{x:Static res:AppStrings.CHOR2Avg}" FontAttributes="Bold"/>
                 <Entry Grid.Row="10" Grid.Column="1" x:Name="entryR2CHO" IsReadOnly="true"/>
                 
-                <Label Grid.Row="11" Grid.Column="1" Text="CHO - # Segments:" FontAttributes="Bold"/>
+                <Label Grid.Row="11" Grid.Column="1" Text="{x:Static res:AppStrings.CHOSegmentsCount}" FontAttributes="Bold"/>
                 <Entry Grid.Row="12" Grid.Column="1" x:Name="entrySegmentsCHO" IsReadOnly="true"/>
                 
                 <!-- Method 2 Results - Insulin Channel -->
-                <Label Grid.Row="13" Grid.Column="1" Text="Insulin - τ [s] (μ ± σ):" FontAttributes="Bold"/>
+                <Label Grid.Row="13" Grid.Column="1" Text="{x:Static res:AppStrings.InsulinTauMeanSd}" FontAttributes="Bold"/>
                 <Entry Grid.Row="14" Grid.Column="1" x:Name="entryTauInsulin" IsReadOnly="true"/>
                 
-                <Label Grid.Row="15" Grid.Column="1" Text="Insulin - k (μ ± σ):" FontAttributes="Bold"/>
+                <Label Grid.Row="15" Grid.Column="1" Text="{x:Static res:AppStrings.InsulinGainMeanSd}" FontAttributes="Bold"/>
                 <Entry Grid.Row="16" Grid.Column="1" x:Name="entryGainInsulin" IsReadOnly="true"/>
                 
-                <Label Grid.Row="17" Grid.Column="1" Text="Insulin - Delay [samples] (μ ± σ):" FontAttributes="Bold"/>
+                <Label Grid.Row="17" Grid.Column="1" Text="{x:Static res:AppStrings.InsulinDelaySamplesMeanSd}" FontAttributes="Bold"/>
                 <Entry Grid.Row="18" Grid.Column="1" x:Name="entryDelayInsulin2" IsReadOnly="true"/>
                 
-                <Label Grid.Row="19" Grid.Column="1" Text="Insulin - Offset (μ ± σ):" FontAttributes="Bold"/>
+                <Label Grid.Row="19" Grid.Column="1" Text="{x:Static res:AppStrings.InsulinOffsetMeanSd}" FontAttributes="Bold"/>
                 <Entry Grid.Row="20" Grid.Column="1" x:Name="entryOffsetInsulin" IsReadOnly="true"/>
                 
-                <Label Grid.Row="21" Grid.Column="1" Text="Insulin - R² avg:" FontAttributes="Bold"/>
+                <Label Grid.Row="21" Grid.Column="1" Text="{x:Static res:AppStrings.InsulinR2Avg}" FontAttributes="Bold"/>
                 <Entry Grid.Row="22" Grid.Column="1" x:Name="entryR2Insulin" IsReadOnly="true"/>
                 
-                <Label Grid.Row="23" Grid.Column="1" Text="Insulin - # Segments:" FontAttributes="Bold"/>
+                <Label Grid.Row="23" Grid.Column="1" Text="{x:Static res:AppStrings.InsulinSegmentsCount}" FontAttributes="Bold"/>
                 <Entry Grid.Row="24" Grid.Column="1" x:Name="entrySegmentsInsulin" IsReadOnly="true"/>
                 
             </Grid>
